--- a/nft.html
+++ b/nft.html
@@ -211,7 +211,7 @@
     
                 <div>
                     <label for="campoMensaje">
-                        <span>Por qué deberias ganar?</span>
+                        <span>Tienes alguna pregunta en particular?</span>
                         <textarea name="mensaje" id="campoMensaje" required></textarea>
     
                     </label>
