--- a/nft.html
+++ b/nft.html
@@ -160,7 +160,7 @@
         <div class="form" style="background-color: black; color: white;">
             <h2>Obtene mas informacion sobre los NFTs</h2>
 
-            <form id="formData" netlify action="respuesta.html"  method="get">
+            <form id="formData" netlify method="get">
 
                 <!-- nombre, email, genero , localidad, mensaje -->
     
@@ -204,7 +204,7 @@
                             <option value="">Buenos Aires</option>
                             <option value="">Mar del plata</option>
                             <option value="">Dolores</option>
-                            <option value="">Azul</option>
+                            <option value="">Otro</option>
                         </select>
                     </label>
                 </div>
