--- a/nft.html
+++ b/nft.html
@@ -160,7 +160,7 @@
         <div class="form" style="background-color: black; color: white;">
             <h2>Obtene mas informacion sobre los NFTs</h2>
 
-            <form id="formData" netlify method="get">
+            <form id="formData" netlify >
 
                 <!-- nombre, email, genero , localidad, mensaje -->
     
